# exhibition-vm-controller

./: .gitignore  .zenodo.json  AUTHORS  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  codemeta.json
deployment/nginx/: README.md
deployment/openbox/: README.md  autostart
deployment/systemd/: README.md  exhibition-vm-controller.service
docs/: api-reference.md  architecture.md  getting-started.md  heartbeat-protocol.md  troubleshooting.md
guest-scripts/mac-os-9/: README.md  heartbeat.applescript  idle-monitor.applescript  process-watchdog.applescript  restart-monitors.applescript
guest-scripts/mac-os-9/lib/: http-helper.applescript
guest-scripts/windows-xp/: README.md  button-detector.au3  heartbeat.au3  idle-monitor.au3  process-watchdog.au3  run.au3
host-controller/: README.md  pyproject.toml
host-controller/examples/: config.example.yaml
host-controller/hooks/: .gitignore
host-controller/hooks/polls/: README.md  button.example.sh
host-controller/hooks/signals/: README.md  ui-state.example.sh
host-controller/plugins/: .gitignore  README.md  __init__.py  example_button.example.py
host-controller/static/: index.html
host-controller/vm_controller/: __init__.py  api.py  config.py  heartbeat_monitor.py  plugins.py  vm_manager.py
